# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import channelsRouter from "./channels";
+import videosRouter from "./videos";
+import overridesRouter from "./overrides";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(channelsRouter);
+router.use(videosRouter);
+router.use(overridesRouter);
 
 export default router;
